2008-05-31  Neal H. Walfield  <neal@gnu.org>

	* storage.h (storage_check_reserve): Take additional parameter
	i_may_have_as_lock.  Update users.
	* storage.c (storage_check_reserve_internal): Add parameter
	i_may_have_lock.  If false, assume that we do not hold AS_LOCK.
	(storage_check_reserve): Add parameter i_may_have_lock.  Pass to
	storage_check_reserve_internal.

2008-05-31  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_check_reserve_internal): If we don't get
	AS_LOCK, don't jump to out_unlock, just return.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* storage.c: Remove debugging code accidentally checked in in last
	commit.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* storage.h (storage_check_reserve): New declaration.
	* storage.c (MIN_FREE_PAGES): Rename from this...
	(FREE_PAGES_LOW_WATER): ... to this and bump to 64.  Update users.
	(FREE_PAGES_SERIALIZE): New define.
	(storage_low_mutex): New variable.
	(storage_low_mutex_once): Likewise.
	(storage_low_mutex_init): New function.
	(storage_alloc): Move folio allocation code to...
	(storage_check_reserve_internal): ... this new function.  If the
	number of pages is less than FREE_PAGES_SERIALIZE, take the
	storage_low_mutex lock.
	(storage_alloc): Call that function.
	(storage_check_reserve): New function.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
	Create symbolic link to package's library in `sysroot/lib/'.
	* Makefile.am [ENABLE_TESTS]: Don't build package's library.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_activated): Assume the fault is
	on the stack if it is one page above or three pages below the
	stack pointer.
	(exception_handler_init): Allocate an area of address space
	EXCEPTION_STACK_SIZE bytes larges.  Fill it with pages.  Set the
	first page as the thread's exception page and the top of the area